# Bitirme-Projesi

./: README.md  requirements.txt
dataset/input videos/: links
otonom_park/control/: CMakeLists.txt  cmd_vel_listener.py  connection.py  distance_warn_node.py  lidar_distance.launch.py  limited_scan.py  manual_control.launch.py  package.xml
otonom_park/navigation/: CMakeLists.txt  README.md  TURKCE_PARAMETRE_KILAVUZU.md  bt.xml  package.xml
otonom_park/navigation/config/: dual_ekf_navsat.yaml  ekf.yaml  imu_filter.yaml  keepout_nav2_params.yaml  keepout_nav2_paramsNEW.yaml  keepout_nav2_params_normalRobot.yaml  keepout_params.yaml  lidar_slam.yaml  nav2_params.yaml  rviz2.rviz
otonom_park/navigation/launch/: ekf_localization.launch.py  full_nav2.launch.py  keepout_full_nav2.launch.py  keepout_localization_launch.py  keepout_navigation_launch.py  keepout_navigation_launchOLD.py  lidar_slam.launch.py  localization_launch.py  navigation_launch.py
otonom_park/navigation/maps/: keepout_teknofestObstacle.pgm  keepout_teknofestObstacle.yaml  teknofestObstacle.pgm  teknofestObstacle.yaml
otonom_park/navigation/scripts/: park_navigator.py  slot_detector.py
results/classification/: results.csv
results/train100/: results.csv
results/train3/: results.csv
src/: testing.py
src/OpenCV codes/: Canny Edge Detection.py  Hough Transforms.py  add images with weights.py  addImages.py  bitwise.py  changing a color space on a video.py  contours.py  corner detection.py  creating a default canvas.py  decrease roughnesses in a photo.py  different colour spaces.py  histogram.py  (+18 more)
(+96 files in other folders)
